<resources>
    <string name="app_name">My Finance App</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="text">Title</string>

    <string-array name="main_indexes">
        <item><b>S&amp;P 500</b></item>
        <item><b>Dow Jones</b></item>
        <item><b>Nasdaq</b></item>
        <item><b>Russel 2000</b></item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="webclient_id">926656167201-jncuq9nhnvqffli5vigh16h7rh2nhttj.apps.googleusercontent.com</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">Open</string>
    <string name="prev_close">Prev. Close</string>
    <string name="market_cap">Market Cap</string>
    <string name="day_range">Day\'s Range</string>
    <string name="volume">Volume</string>
    <string name="_52_week_range">52 Week Range</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="surname">Surname</string>
    <string name="sign_up">Sign Up</string>
    <string name="lists">Lists</string>
    <string name="create_list">Create List</string>
    <string name="delete_list">Delete List</string>
    <string name="create_list_text">Search relevant stocks you want to add to the list. The chosen stocks will appear below</string>
    <string name="list_name">List name</string>
    <string name="save">save</string>


    <string name="hyperlink">Open <a href="https://www.geeksforgeeks.org">GeeksforGeeks portal</a></string>

</resources>